[package]
name = "nature-demo"
version = "0.0.3"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2018"
workspace = "../Nature"

description = "Demo to show how to use Nature"
repository = "https://github.com/llxxbb/Nature-Demo"
license = "MIT"


[dependencies]
nature_common = {path = "../Nature-Common", version="0.0.3"}
nature_demo_common = {path = "../Nature-Demo-Common", version="0.0.3"}

serde_json = "1.0"
serde = "1.0"
reqwest = "0.9"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }