[package]
name = "nature-demo"
version = "0.5.0"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2018"
workspace = "../Nature"

description = "Demo to show how to use Nature"
repository = "https://github.com/llxxbb/Nature-Demo"
license = "MIT"


[dependencies]
nature_common = {path = "../Nature-Common", version = "0.5.0"}
nature_demo_common = {path = "../Nature-Demo-Common", version = "0.5.0"}

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }

# log
log = "0.4"
fern = "0.6"        # Simple, efficient logging
